2012-11-21      Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-libs-pim/Random.def:  export RandomLongReal and
	  RandomBytes.  Fixes a bug reported by Steve Giess.

2012-09-19      Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/SymbolTable.mod:  bug fix to fix up all
	  unbounded parameter types if they are produced via partial
	  unbounded symbols.  Fixes a bug exposed by macroObjects.mod
	  in a new example directory.

2012-06-28      Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/M2GenGCC.mod:  CodeAddr can now obtain the
	  address of CHAR constants.  Fixes a bug reported by Scott
	  Iverson.
	* gm2/gm2-compiler/M2GenGCC.mod:  corrected CodeAddr to ensure
	  that the address of a char is only converted into address of
	  a string for constants.

2012-05-04      Gaius Mulley <gaius@gnu.org>

	* gm2/gm2spec.c:  detect -fonlylink.  Ensure that -fonlylink is
	  present on the command line if -fmakeall is used.  Otherwise
	  the driver will compile and link the main module object together
	  with the main module compiled via the make.  Fixes a bug reported
	  by Scott Iverson, linking a shared library.

2012-05-03      Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/M2GenGCC.mod:  (BinaryOperands) New procedure function.
	  Used by FoldAdd, CodeAdd, FoldSub, CodeSub, FoldMult, CodeMult,
	  FoldDivTrunc, CodeDivTrunc, FoldModFloor, CodeModFloor.

2012-05-02      Gaius Mulley <gaius@gnu.org>

	* gm2/gccgm2.c:  (convert_for_comparison) New function.
	  gccgm2_BuildEqualTo, gccgm2_BuildNotEqualTo use
	  convert_for_comparison.  This fixes comparison between a
	  WORD operand.  Bug reported by Scott Iverson.
	* gm2/gccgm2.c:  applied fix for all WORD sizes.

2012-05-01      Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/M2GenGCC.mod:  (CodeStandardFunction) implement
	  TBITSIZE.  (FoldStandardFunction) implement TBITSIZE.
	* gm2/gm2-compiler/M2Quads.mod:  (BuildTBitSizeFunction) New
	  procedure function.